syntax = "proto3";

option csharp_namespace = "GrpcApp";

package GrpcApp;

service Subscriber {
  rpc Subscribe (SubscriberRequest) returns (SubscriberReply);
}

message SubscriberRequest {
  string topic = 1;
  string address = 3;
}

message SubscriberReply {
  bool isSuccess = 1;
}
